<resources>
    <string name="app_name">Inflation-IRL</string>
    <string name="product_title">Product title</string>
    <string name="product_price">Product price</string>
    <string name="add_picture_of_label">Add picture of label</string>
    <string name="search_price_history">Search price history</string>
    <string name="picture_of_the_product_label">Picture of the product label</string>
    <string name="select_store_prompt">Select store</string>
    <!-- Scan barcode view-->
    <string name="bottom_nav_text_scan_barcode">Scan Barcode</string>
    <string name="bottom_nav_text_history">History</string>

    <!-- Scan barcode view-->
    <string name="selected_shop">Selected shop</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="history_list_store_icon_description_tooltip">Store icon</string>
    <string name="history_list_item_icon_description_tooltip">Item icon</string>
    <string name="search_prices">Search price</string>
    <string name="product_bar_code">Product bar code</string>
    <string name="loading_text">Loading…</string>
    <string name="product_info_table_header_date">Date</string>
    <string name="product_info_table_header_price">Price</string>
    <string name="scan_another_item_button">Scan another item</string>
    <string name="product_price_textView">Today: %s€</string>
    <string name="product_unavailable">Product unavailable</string>

    <!-- History view-->

    <!-- Product info view-->
</resources>